Fix StepNumberInput font size and spacing

--- a/src/components/StepNumberInput/StepNumberInput.scss
+++ b/src/components/StepNumberInput/StepNumberInput.scss
@@ -18,8 +18,6 @@ $border-width: 2px;
   }
 
   .range-step-title {
-    @include margins.margin('y', 2);
-    @include margins.margin('x', 0);
     color: var(--ghost-button);
     font-size: font-size.$h4;
     text-align: center;
@@ -27,8 +25,6 @@ $border-width: 2px;
   }
 
   .range-step-description {
-    @include margins.margin('y', 1);
-    @include margins.margin('x', 0);
     color: var(--text-default);
     font-size: font-size.$text-m;
     text-align: center;
@@ -39,6 +35,7 @@ $border-width: 2px;
     & {
       flex-direction: row;
       display: flex;
+      align-items: center;
     }
 
     button {
@@ -68,11 +65,11 @@ $border-width: 2px;
     input,
     span {
       @include paddings.padding('y', 0);
-      @include paddings.padding('x', 4);
+      @include paddings.padding('x', 3);
       font-family: font-family.$console;
       background-color: transparent;
       border: 0px none transparent;
-      font-size: font-size.$input;
+      font-size: 1.75rem;
       line-height: 1em;
       text-align: center;
       color: var(--text-default);
@@ -89,7 +86,7 @@ $border-width: 2px;
       @include paddings.padding('y', 0);
       @include paddings.padding('x', 0);
       @include margins.margin('y', 0);
-      @include margins.margin('x', 4);
+      @include margins.margin('x', 3);
       overflow: hidden;
       // align height to input style
       display: flex;
